CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
IF (COMMAND cmake_policy)
	cmake_policy (SET CMP0003 NEW)
ENDIF (COMMAND cmake_policy)
PROJECT (lcsynctest)

FIND_PACKAGE (Qt4 REQUIRED)

SET (QT_USE_QTNETWORK TRUE)
INCLUDE (${QT_USE_FILE})

INCLUDE_DIRECTORIES (
	${CMAKE_CURRENT_BINARY_DIR}
	)

SET (SRCS
	main.cpp
	mainwindow.cpp
	)
SET (HEADERS
	mainwindow.h
	)
SET (FORMS
	mainwindow.ui
	)

QT4_WRAP_CPP (MOC_SRCS ${HEADERS})
QT4_WRAP_UI (UIS_H ${FORMS})

ADD_EXECUTABLE (lcsynctest WIN32
	${SRCS}
	${MOC_SRCS}
	${UIS_H}
	)

TARGET_LINK_LIBRARIES (lcsynctest
	${QT_LIBRARIES}
	)
INSTALL (TARGETS lcsynctest DESTINATION bin)
